<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.progdawn.currencyconversion.MainActivity">

    <TextView
        android:text="@string/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtTitle"
        android:textSize="30sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"
        android:id="@+id/txtCurrency"
        android:hint="@string/hint"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="25sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCurrency"
        android:layout_marginTop="15dp"
        android:id="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <RadioButton
            android:text="@string/radEuros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radEuros"
            android:layout_weight="1"
            android:checked="true"
            android:layout_marginTop="10dp"
            android:textSize="20sp" />

        <RadioButton
            android:text="@string/radPesos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radPesos"
            android:layout_weight="1"
            android:textSize="20sp" />

        <RadioButton
            android:text="@string/radCanadian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radCanadian"
            android:layout_weight="1"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:text="@string/btnConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/btnConvert"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnConvert"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:id="@+id/txtResult"
        android:textSize="30sp" />

    <TextView
        android:text="@string/txtMyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:id="@+id/txtMyName"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
